# SDCfinder

./: .gitlab-ci.yml  LICENSE  README.md
C/: CMakeLists.txt  Doxyfile  MemoryReliability.c
C/include/: MemoryReliability_decl.cuh  MemoryReliability_decl.h  addresstranslation.h  injection.h  logging.h  types.h
C/include/ARM/: pmu.h
C/lib/: MemoryReliability_defs.c  addresstranslation.c  daemon.c  injection.c  logging.c  memcheck.c  pmu.c  tools.c  tools.cu
C/lib/ARM/: pmu.c
Py/: requirements.txt
Py/sdcfinder/: __main__.py  sdcfinder.py  sysinfo.py
