cmake_minimum_required (VERSION 3.0)
project (MemoryReliability)
option(ENABLE_ERROR_INJECTION "Inject randomly errors in allocated memory region" OFF)
if(ENABLE_ERROR_INJECTION)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DINJECT_ERR")
endif()
add_executable(MemoryReliability MemoryReliability.c)
include_directories("${CMAKE_SOURCE_DIR}/include")
set(MRLIB_SRC ${CMAKE_SOURCE_DIR}/lib/addresstranslation.c ${CMAKE_SOURCE_DIR}/lib/logging.c ${CMAKE_SOURCE_DIR}/lib/MemoryReliability_defs.c ${CMAKE_SOURCE_DIR}/lib/pmu.c ${CMAKE_SOURCE_DIR}/lib/tools.c)
add_library(MRlib STATIC ${MRLIB_SRC})
target_link_libraries(MemoryReliability MRlib)
install(TARGETS MemoryReliability RUNTIME DESTINATION bin)
